# Pipeline-End-to-End-Training-of-YOLO-models-for-Benchmarking

./: .gitignore  Makefile  README.md  app.py  config copy.yaml  config.yaml  main.py  pyproject.toml  run.sh
app/: config_handler.py  main.py  widgets.py
dataset/: data.yaml
dataset/train/: labels.json  train_data_cleaned.csv
dataset/train/labels/: 000000000049.txt  000000000061.txt  000000000074.txt  000000000086.txt  000000000113.txt
dataset/val/: labels.json
dataset/val/labels/: 000000000785.txt  000000001353.txt
dataset/validation/: val_data_cleaned.csv
dataset/yolo_dataset/: data.yaml
docs/: data-manager.md  ground-truth.md  hyperparameter-finetuning.md  metrics.md  sagemaker-inference.md
notebooks/: inference.ipynb  inference.py  pipeline.py  requirements.txt  train_yolo.py  visualization.ipynb  viz.py
src/: consts.py  data_cleaning.py  get_dataset.py
src/app/: __init__.py  config_handler.py  main.py  theme.py
src/data/: csv_to_txts.py
src/lambda/yolo-inference/: README.md  main.py  template.yaml
src/sagemaker/: entrypoint_evaluation.py  entrypoint_trainer.py  entrypoint_training.py  inference.py  requirements.txt  sagemaker_data_manager.py  sagemaker_deployment.py  sagemaker_evaluation.py  sagemaker_hyperparameter_tuning.py  sagemaker_inference.py  sagemaker_metrics.py  sagemaker_pipeline.py  sagemaker_train.py  sagemaker_trainer.py  test_hyperparameter.py  utils.py  utils_metrics.py  yolo_entrypoint.py
src/sagemaker/dependencies/: requirements.txt  requirements_processing.txt
src/sagemaker/discard/: inference.py  (+1 more)
(+39 files in other folders)
