[project]
name = "pipeline-yolo"
version = "0.1.0"
description = "Pipeline for YOLO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.5",
    "fiftyone>=1.7.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "rich>=13.0.0",
    "s3fs>=2023.12.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0",
]
